인트로 섹션 레이아웃 정리

--- a/app/index.html
+++ b/app/index.html
@@ -34,240 +34,246 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
 
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header page-scroll">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-        <i class="fa fa-bars"></i>
-      </button>
-      <a class="navbar-brand" href="#page-top">
-        <span class="light">The Whale Games</span>
-      </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <ul class="nav navbar-nav">
-        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-        <li class="page-scroll">
-          <a href="#about">Home</a>
-        </li>
-        <li class="page-scroll">
-          <a href="#service">Service</a>
-        </li>
-        <li class="page-scroll">
-          <a href="#recruit">Recruit</a>
-        </li>
-        <li class="page-scroll">
-          <a href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container -->
-</nav>
-
-<section id="about" class="intro">
-  <div class="intro-body" data-scroll-reveal>
+  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
-          <div class="row ci">
-            <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
-          </div>
-          <div class="row ci-intro">
-            <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
-          </div>
-        </div>
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+          <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#page-top">
+          <span class="light">The Whale Games</span>
+        </a>
       </div>
-    </div>
-  </div>
-</section>
 
-<section id="service" class="container content-section">
-  <div class="row container">
-    <div class="page-header">
-      <h1>Service <small>더웨일게임즈는 만들고 있습니다.</small></h1>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-12">
-        <h2><a href="http://esportsbattle.com">eSportsBattle</a></h2>
-        <p>
-          e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
-          매일 100명 + 일주일에 100명에게 문화상품권 폭격
-        </p>
-      <div class="row">
-        <div class="col-lg-4">
-          <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
-        </div>
-        <div class="col-lg-8">
-          <p>
-            매일 전 세계에서 벌어지는 e스포츠 경기의 승부를 예측하면서 회원끼리 포인트 경쟁을 펼쳐보세요
-          </p>
-          <p>
-            광고보기, 커뮤니티 활동 등을 통해 포인트를 모으고 경기 결과를 예측하고 포인트 배틀을 벌이세요. 푸짐한 금액의 문화상품권이 지급됩니다.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-12">
-      <h2>NEXON G-STAR</h2>
-      <div class="row">
-        <div class="col-lg-12">
-          <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.
-            2013년 11월 14일부터 17일까지 열린 국제게임박람회 G-STAR 2013에서 더웨일게임즈는 G-STAR 정식 앱 "응답하라 넥슨 지스타"를 만들어 서비스했습니다.</p>
-          <p>이 앱에는 더웨일게임즈가 핵심으로 삼고 있는 베팅 시스템이 포함되어 있으며, 넥슨 인비테이셔널 슈퍼매치에 시스템이 적용되어 4일동안 6,000여명의 인원들이 가입하여 배팅과 퀴즈를 즐겼습니다.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <img src="images/phone_nexongstar.png" class="img-responsive" alt=""/>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-12">
-      <h2>BET LOL</h2>
-      <div class="row">
-        <div class="col-lg-12">
-          <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <img src="images/phone_betlol.png" class="img-responsive" alt=""/>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</section>
-
-<section id="recruit" class="container content-section">
-  <div class="row container">
-    <div class="page-header">
-      <h1>Recruit <br><small>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</small></h1>
-    </div>
-  </div>
-  <div class="row container">
-    <div class="col-md-5">
-      <div class="row">
-        <h3>개발</h3>
-        <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
-      </div>
-      <div class="row">
-        <h3>기획운영</h3>
-        <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
-      </div>
-      <div class="row">
-        <h3>디자인</h3>
-        <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
-      </div>
-    </div>
-    <div class="col-md-5 col-md-offset-1">
-<!--       <div class="row">
-        <h3>모집인원</h3>
-        <ul>
-          <li>개발 : 상시모집</li>
-          <li>기획운영 : 상시모집</li>
-          <li>디자인 : 상시모집</li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+        <ul class="nav navbar-nav">
+          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li class="page-scroll">
+            <a href="#about">Home</a>
+          </li>
+          <li class="page-scroll">
+            <a href="#service">Service</a>
+          </li>
+          <li class="page-scroll">
+            <a href="#recruit">Recruit</a>
+          </li>
+          <li class="page-scroll">
+            <a href="#contact">Contact</a>
+          </li>
         </ul>
-      </div> -->
-      <div class="row">
-        <h3>지원방법</h3>
-        <p>
-          recruit@thewhalegames.com<br>
-          이력서, 자기소개서, 포트폴리오
-        </p>
       </div>
+      <!-- /.navbar-collapse -->
     </div>
-  </div>
-</section>
+    <!-- /.container -->
+  </nav>
 
-<section id="contact" class="contact">
-  <div class="contact-body" data-scroll-reveal="ease-in-out 100px">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h2>Contact The Whales</h2>
-          <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
-
-          <ul class="list-inline banner-social-buttons">
-            <li>
-              <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li>
-              <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
-                <i class="fa fa-envelope"></i>
-              </a>
-            </li>
-          </ul>
-
+  <section id="about" class="intro">
+    <div class="intro-body" data-scroll-reveal>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+            <div class="row ci">
+              <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
+            </div>
+            <div class="row ci-intro">
+              <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer class="container">
-  <strong class="text-left">The Whale Games</strong>
-  <address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
-</footer>
-
-<!-- build:js scripts/vendor.js -->
-<!-- bower:js -->
-<script src="../bower_components/jquery/dist/jquery.js"></script>
-<script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<!--<script>-->
-<!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
-<!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
-<!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
-<!--e.src='//www.google-analytics.com/analytics.js';-->
-<!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
-<!--ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');-->
-<!--</script>-->
-
-<!-- build:js scripts/plugins.js -->
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
-<!-- endbuild -->
+  <section id="service" class="container content-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row">
+            <h1>eSports Battle</h1>
+            <hr class="bold">
+            <p>
+              e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀<br>
+              매일 100명 + 일주일에 100명에게 문화상품권 폭격!!
+            </p>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
+            </div>
+            <div class="col-md-4">
+              <p class="seperator-left">
+                매일 전 세계에서 벌어지는 e스포츠 경기의 승부를 예측하면서 회원끼리 포인트 경쟁을 펼쳐보세요
+              </p>
+            </div>
+            <div class="col-md-4 col-md-offset-1">
+              <p>
+                광고보기, 커뮤니티 활동 등을 통해 포인트를 모으고 경기 결과를 예측하고 포인트 배틀을 벌이세요. 푸짐한 금액의 문화상품권이 지급됩니다.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-<!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row">
+            <h1>NEXON G-STAR</h1>
+            <hr class="bold">
+            <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.<br>
+              2013년 11월 14일부터 17일까지 열린 국제게임박람회 G-STAR 2013에서<br>더웨일게임즈는 G-STAR 정식 앱 "응답하라 넥슨 지스타"를 서비스했습니다.</p>
+              <p>이 앱에는 더웨일게임즈가 핵심으로 삼고 있는 베팅 시스템이 포함되어 있으며,<br> 넥슨 인비테이셔널 슈퍼매치에 시스템이 적용되어 4일동안 6,000여명의 인원들이 가입하여 배팅과 퀴즈를 즐겼습니다.</p>
+            </div>
 
-<!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
-<script>
-  window.scrollReveal = new scrollReveal();
-</script>
-</body>
+            <div class="row">
+              <div class="col-lg-12">
+                <img src="images/phone_nexongstar.png" class="img-responsive center-block" alt=""/>
+              </div>
+            </div>
+          </div>
+        </div>
 
-</html>
+        <div class="row">
+          <div class="col-lg-12">
+            <h1>BET LOL</h1>
+
+            <hr class="bold">
+
+            <div class="row">
+              <div class="col-lg-12">
+                <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <img src="images/phone_betlol.png" class="img-responsive center-block" alt=""/>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <hr class="bold">
+    </section>
+
+
+
+    <section id="recruit" class="container content-section">
+      <div class="row container">
+        <h1>Recruit</h1>
+        <hr class="bold">
+        <p>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</p>
+        <div class="col-md-5">
+          <div class="row">
+            <h2>지원분야</h2>
+            <hr class="light">
+          </div>
+
+          <div class="row">
+            <h3>개발 (Software Engineer)</h3>
+            <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
+          </div>
+          <div class="row">
+            <h3>기획운영 (Product Manager)</h3>
+            <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
+          </div>
+          <div class="row">
+            <h3>디자인 (UX/UI Designer)</h3>
+            <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
+          </div>
+        </div>
+        <div class="col-md-5 col-md-offset-1">
+          <div class="row">
+            <h2>지원방법</h2>
+            <hr class="light">
+            <p>
+              recruit@thewhalegames.com<br>
+              이력서, 자기소개서, 포트폴리오
+            </p>
+          </div>
+        </div>
+      </div>
+      <hr class="bold">
+    </section>
+
+    <section id="contact" class="contact">
+      <div class="contact-body" data-scroll-reveal="ease-in-out 100px">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <h2>Contact The Whales</h2>
+              <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
+
+              <ul class="list-inline banner-social-buttons">
+                <li>
+                  <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="container">
+      <span><strong class="text-left brand">The Whale Games</strong></span>
+      <span><address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address></span>
+    </footer>
+
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!--<script>-->
+    <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
+    <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
+    <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
+    <!--e.src='//www.google-analytics.com/analytics.js';-->
+    <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
+    <!--ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');-->
+    <!--</script>-->
+
+    <!-- build:js scripts/plugins.js -->
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+    <!-- endbuild -->
+
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
+
+    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <script src="scripts/main.js"></script>
+    <!-- endbuild -->
+    <script>
+    window.scrollReveal = new scrollReveal();
+    </script>
+  </body>
+
+  </html>
