--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,8 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 
+  <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -189,7 +191,7 @@
             <h2>지원방법</h2>
             <hr class="light">
             <p>
-              recruit@thewhalegames.com<br>
+              <a href="mailto:recruit@thewhalegames.com">recruit@thewhalegames.com</a><br>
               이력서, 자기소개서, 포트폴리오
             </p>
           </div>
@@ -237,15 +239,14 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--<script>-->
-    <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
-    <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
-    <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
-    <!--e.src='//www.google-analytics.com/analytics.js';-->
-    <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
-    <!--ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');-->
-    <!--</script>-->
+    <script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='//www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');
+    </script>
 
     <!-- build:js scripts/plugins.js -->
     <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
@@ -264,9 +265,6 @@
 
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/main.js"></script>
