recruit 메일 주소 변경

--- a/app/index.html
+++ b/app/index.html
@@ -191,7 +191,7 @@
             <h2>지원방법</h2>
             <hr class="light">
             <p>
-              <a href="mailto:recruit@thewhalegames.com">recruit@thewhalegames.com</a><br>
+              <a href="mailto:contact@thewhalegames.com">contact@thewhalegames.com</a><br>
               이력서, 자기소개서, 포트폴리오
             </p>
           </div>
