Intro 문구 및 폰트 크기 조정

--- a/app/index.html
+++ b/app/index.html
@@ -52,13 +52,10 @@
         <ul class="nav navbar-nav">
           <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
           <li class="page-scroll">
-            <a href="#about">Home</a>
+            <a href="#service">Product</a>
           </li>
           <li class="page-scroll">
-            <a href="#service">Service</a>
-          </li>
-          <li class="page-scroll">
-            <a href="#recruit">Recruit</a>
+            <a href="#recruit">Join Us</a>
           </li>
           <li class="page-scroll">
             <a href="#contact">Contact</a>
@@ -79,7 +76,7 @@
               <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
             </div>
             <div class="row ci-intro">
-              <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
+              <p>더웨일게임즈는 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼과 커뮤니티를 만들고 있습니다.</p>
             </div>
           </div>
         </div>
