--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
-          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li class="page-scroll">
+            <a href="#esports">E-Sports</a>
+          </li>
           <li class="page-scroll">
             <a href="#service">Product</a>
           </li>
@@ -84,191 +86,187 @@
     </div>
   </section>
 
-  <section id="service" class="container content-section">
+  <section id="esports" class="container content-section">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="row">
-            <h1>eSports Battle</h1>
-            <hr class="bold">
-            <p>
-              e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀<br>
-              매일 100명 + 일주일에 100명에게 문화상품권 폭격!!
-            </p>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
-            </div>
-            <div class="col-md-4">
-              <p class="seperator-left">
-                매일 전 세계에서 벌어지는 e스포츠 경기의 승부를 예측하면서 회원끼리 포인트 경쟁을 펼쳐보세요
-              </p>
-            </div>
-            <div class="col-md-4 col-md-offset-1">
-              <p>
-                광고보기, 커뮤니티 활동 등을 통해 포인트를 모으고 경기 결과를 예측하고 포인트 배틀을 벌이세요. 푸짐한 금액의 문화상품권이 지급됩니다.
-              </p>
-            </div>
-          </div>
-        </div>
+      <div class="row text-center">
+        <h1>가능성과 잠재력을 가진 e스포츠 시장</h1>
+        <p>
+          e스포츠 생태계는 이제 시작일 뿐
+        </p>
       </div>
-
-
-
       <div class="row">
-        <div class="col-lg-12">
-          <div class="row">
-            <h1>NEXON G-STAR</h1>
-            <hr class="bold">
-            <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.<br>
-              2013년 11월 14일부터 17일까지 열린 국제게임박람회 G-STAR 2013에서<br>더웨일게임즈는 G-STAR 정식 앱 "응답하라 넥슨 지스타"를 서비스했습니다.</p>
-              <p>이 앱에는 더웨일게임즈가 핵심으로 삼고 있는 베팅 시스템이 포함되어 있으며,<br> 넥슨 인비테이셔널 슈퍼매치에 시스템이 적용되어 4일동안 6,000여명의 인원들이 가입하여 배팅과 퀴즈를 즐겼습니다.</p>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-12">
-                <img src="images/phone_nexongstar.png" class="img-responsive center-block" alt=""/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12">
-            <h1>BET LOL</h1>
-
-            <hr class="bold">
-
-            <div class="row">
-              <div class="col-lg-12">
-                <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <img src="images/phone_betlol.png" class="img-responsive center-block" alt=""/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <hr class="bold">
-    </section>
-
-
-
-    <section id="recruit" class="container content-section">
-      <div class="row container">
-        <h1>Recruit</h1>
-        <hr class="bold">
-        <p>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</p>
-        <div class="col-md-5">
-          <div class="row">
-            <h2>지원분야</h2>
-            <hr class="light">
-          </div>
-
-          <div class="row">
-            <h3>개발 (Software Engineer)</h3>
-            <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
-          </div>
-          <div class="row">
-            <h3>기획운영 (Product Manager)</h3>
-            <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
-          </div>
-          <div class="row">
-            <h3>디자인 (UX/UI Designer)</h3>
-            <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
-          </div>
-        </div>
         <div class="col-md-5 col-md-offset-1">
-          <div class="row">
-            <h2>지원방법</h2>
-            <hr class="light">
-            <p>
-              <a href="mailto:contact@thewhalegames.com">contact@thewhalegames.com</a><br>
-              이력서, 자기소개서, 포트폴리오
-            </p>
-          </div>
+          <h2 class="text-center">
+            <span class="glyphicon glyphicon-user"></span>
+            잠재유저 4억명
+          </h2>
+          <p>리그 오브 레전드 1억명, 크로스파이어 2억명, 도타2 2천만명 유저 글로벌 e스포츠 잠재유저는 약 4억명 이상</p>
+        </div>
+        <div class="col-md-5">
+          <h2 class="text-center">
+            <span class="glyphicon glyphicon-signal"></span>
+            연 2배 성장
+          </h2>
+          <p>북미, 유럽 e스포츠 중계 채널인 트위치 티비는 출시 2년 3개월 만에 4500만명이 머무르는 거대 미디어가 됨</p>
         </div>
       </div>
-      <hr class="bold">
+      <div class="row text-center">
+        <blockquote>
+          <p>대회, 미디어, 스폰서 등 생태계의 각 영역이 아직은 걸음마 단계</p>
+          <footer>더스틴 백, 라이엇게임즈 VP & e스포츠 총괄</footer>
+        </blockquote>
+        <p>글로벌 e스포츠 유저들의 커뮤니티 플랫폼</p>
+      </div>
     </section>
 
-    <section id="contact" class="contact">
-      <div class="contact-body" data-scroll-reveal="ease-in-out 100px">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h2>Contact The Whales</h2>
-              <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
+    <section id="service" class="container content-section">
+      <div class="container">
+        <div class="row">
+          <div class="page-header">
+            <h1>Product</h1>
+          </div>
+        </div>
+        <div class="row jumbotron">
+          <h1>eSports Battle</h1>
+          <p>
+            e스포츠 결과를 예측하고, 예측 경쟁을 통해 유저간의 또다른 승부를 겨루는 시뮬레이션 서비스
+          </p>
 
-              <ul class="list-inline banner-social-buttons">
-                <li>
-                  <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
-                    <i class="fa fa-envelope"></i>
-                  </a>
-                </li>
-              </ul>
+          <div class="col-md-6">
+            <img src="images/phone_esportsbattle.png" class="center-block img-responsive" alt=""/>
+          </div>
+          <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nobis, doloribus est reiciendis amet corporis autem magnam eos quae. Aliquam voluptatibus doloremque dolores et explicabo obcaecati eius impedit voluptatum eum. 재미와 보상을 줍니다.</p>
+            <a href="http://esportsbattle.com" class="btn btn-primary btn-lg">더 알아보기</a>
+          </div>
 
+        </div>
+        <div class="row center-block">
+          <div class="col-md-3">
+            <h3>Nexon G-Star</h3>
+            <img src="images/phone_nexongstar.png" class="img-responsive media-object" alt=""/>
+            <p>지스타 기간 동안 넥슨 코리아와 제휴하여 서비스</p>
+          </div>
+          <div class="col-md-3">
+            <h3>BET LOL</h3>
+            <img src="images/phone_betlol.png" class="img-responsive media-object" alt=""/>
+            <p>2013 롤드컵 시즌 3를 대상으로 유럽, 필리핀, 한국, 미국, 남미 등 전세계 유저를 유치했습니다.</p>
+          </div>
+        </div>
+      </section>
+
+
+      <section id="recruit" class="container content-section">
+        <div class="page-header">
+          <h1>Recruit</h1>
+          <p>더웨일게임즈와 함께 e스포츠를 더욱 재밌게 만들 인재를 기다리고 있습니다.</p>
+        </div>
+        <div class="row container">
+          <div class="col-md-5">
+            <div class="row">
+              <h2>지원분야</h2>
+              <hr class="light">
+            </div>
+
+            <div class="row">
+              <h3>개발 (Software Engineer)</h3>
+              <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
+            </div>
+            <div class="row">
+              <h3>기획운영 (Product Manager)</h3>
+              <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
+            </div>
+            <div class="row">
+              <h3>디자인 (UX/UI Designer)</h3>
+              <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
+            </div>
+          </div>
+          <div class="col-md-5 col-md-offset-1">
+            <div class="row">
+              <h2>지원방법</h2>
+              <hr class="light">
+              <p>
+                <a href="mailto:contact@thewhalegames.com">contact@thewhalegames.com</a><br>
+                이력서, 자기소개서, 포트폴리오
+              </p>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+        <hr class="bold">
+      </section>
 
-    <footer class="container">
-      <span><strong class="text-left brand">The Whale Games</strong></span>
-      <span><address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address></span>
-    </footer>
+      <section id="contact" class="contact">
+        <div class="contact-body" data-scroll-reveal>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                <h2>Contact The Whales</h2>
+                <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+                <ul class="list-inline banner-social-buttons">
+                  <li>
+                    <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
+                      <i class="fa fa-envelope"></i>
+                    </a>
+                  </li>
+                </ul>
 
-    <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');
-    </script>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <!-- build:js scripts/plugins.js -->
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
-    <!-- endbuild -->
+      <footer class="container company">
+        <span><strong class="text-left brand">The Whale Games</strong></span>
+        <span><address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address></span>
+      </footer>
+
+      <!-- build:js scripts/vendor.js -->
+      <!-- bower:js -->
+      <script src="../bower_components/jquery/dist/jquery.js"></script>
+      <script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
+      <!-- endbower -->
+      <!-- endbuild -->
+
+      <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');
+      </script>
+
+      <!-- build:js scripts/plugins.js -->
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+      <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+      <!-- endbuild -->
 
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
-    <script>
-    window.scrollReveal = new scrollReveal();
-    </script>
-  </body>
+      <!-- build:js({app,.tmp}) scripts/main.js -->
+      <script src="scripts/main.js"></script>
+      <!-- endbuild -->
+      <script>
+      window.scrollReveal = new scrollReveal();
+      </script>
+    </body>
 
-  </html>
+    </html>
