--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="utf-8">
 
   <title>더웨일게임즈 - We Make Games More Fun</title>
   <meta name="description" content="We Make Games More Fun 더웨일게임즈입니다.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <meta name="author" content="The Whale Games">
   <link rel="author" href="humans.txt">
+  <meta name="keywords" content="the whale games, esport battle, 더웨일게임즈, 이스포츠배틀, 이스포츠">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- For older version of IE -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" value="We Make Games More Fun 더웨일게임즈">
