Twitter card meta 정보 추가

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,15 @@
   <![endif]-->
 
   <!-- Twitter Card data -->
-  <meta name="twitter:card" value="We Make Games More Fun 더웨일게임즈">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="더웨일게임즈 The Whale Games">
+  <meta name="twitter:description" content="We Make Games More Fun">
+  <meta name="twitter:creator" content="">
+  <meta name="twitter:image:src" content="http://thewhalegames.com/images/102ae3ef.phone_esportsbattle.png">
+  <meta name="twitter:domain" content="http://thewhalegames.com">
+  <meta name="twitter:app:name:googleplay" content="e스포츠배틀">
+  <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=com.whalegames.app">
+  <meta name="twitter:app:id:googleplay" content="com.whalegames.app">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="We Make Games More Fun 더웨일게임즈" />
