--- a/app/index.html
+++ b/app/index.html
@@ -69,240 +69,280 @@
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
           <li class="page-scroll">
-            <a href="#esports">E-Sports</a>
-          </li>
-          <li class="page-scroll">
-            <a href="#service">Product</a>
-          </li>
-          <li class="page-scroll">
-            <a href="#recruit">Join Us</a>
-          </li>
-          <li class="page-scroll">
-            <a href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-  </nav>
+            <a href="#esports" data-flare='{
+            "category": "Navbar",
+            "action": "click",
+            "label": "Visit e-sports section"
+          }'>E-Sports</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#products" data-flare='{
+          "category": "Navbar",
+          "action": "click",
+          "label": "Visit products section"
+        }'>Product</a>
+      </li>
+      <li class="page-scroll">
+        <a href="#recruit" data-flare='{
+        "category": "Navbar",
+        "action": "click",
+        "label": "Visit recruit section"
+      }'>Join Us</a>
+    </li>
+    <li class="page-scroll">
+      <a href="#contact" data-flare='{
+      "category": "Navbar",
+      "action": "click",
+      "label": "Visit contact section"
+    }'>Contact</a>
+  </li>
+</ul>
+</div>
+<!-- /.navbar-collapse -->
+</div>
+<!-- /.container -->
+</nav>
 
 
-  <section id="about" class="container container-section full-page intro">
-    <div class="intro-body" data-scroll-reveal>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
-            <div class="row ci">
-              <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
-            </div>
-            <div class="row ci-intro">
-              <p>더웨일게임즈는 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼과 커뮤니티를 만들고 있습니다.</p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="esports" class="container content-section full-page">
-    <div class="vertical-center-content" >
-
-      <div class="container">
-        <div class="row text-center">
-          <h1>가능성과 잠재력을 가진 e스포츠 시장</h1>
-          <p>
-            e스포츠 생태계는 이제 시작일 뿐
-          </p>
-        </div>
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1">
-            <h2 class="text-center">
-              <span class="glyphicon glyphicon-user"></span>
-              잠재유저 4억명
-            </h2>
-            <p>리그 오브 레전드 1억명, 크로스파이어 2억명, 도타2 2천만명 등 수많은 e스포츠 잠재유저가 있습니다.</p>
-          </div>
-          <div class="col-md-5">
-            <div class="row">
-              <h2 class="text-center">
-                <span class="glyphicon glyphicon-signal"></span>
-                연 2배 성장
-              </h2>
-            </div>
-
-            <p>북미, 유럽 e스포츠 중계 채널인 트위치 티비는 출시 2년 3개월 만에 4500만명이 머무르는 거대 미디어입니다.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="service" class="container content-section">
+<section id="about" class="container container-section full-page intro">
+  <div class="intro-body" data-scroll-reveal>
     <div class="container">
       <div class="row">
-        <div class="page-header">
-          <h1>Product</h1>
-        </div>
-      </div>
-      <div class="row jumbotron">
-        <div class="row">
-          <h1>eSports Battle</h1>
-        </div>
-
-        <div class="row">
-
-          <div class="col-md-6">
-            <img src="images/phone_esportsbattle.png" class="center-block img-responsive" alt=""/>
+        <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+          <div class="row ci">
+            <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
           </div>
-          <div class="col-md-6">
-            <p>
-              e스포츠 배틀은 e스포츠 결과를 예측하고, 예측 경쟁을 통해 유저 간의 또다른 승부를 겨루는 시뮬레이션 서비스입니다.
-            </p>
-            <p>
-              관심있는 e스포츠 경기에 매일 주어지는 무료 포인트를 걸고 결과를 예측해보세요. 결과를 적중시키고 포인트를 얻으면 일간/주간 포인트 랭킹에 올라 문화상품권의 주인공이 될 수 있습니다.
-            </p>
-            <a href="http://esportsbattle.com/download" class="btn btn-primary btn-lg">다운로드</a>
-            <a href="http://esportsbattle.com" class="btn btn-default btn-lg">더 알아보기</a>
+          <div class="row ci-intro">
+            <p>더웨일게임즈는 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼과 커뮤니티를 만들고 있습니다.</p>
           </div>
 
         </div>
       </div>
-      <div class="row center-block">
-        <div class="col-md-4 col-md-offset-2">
-          <h3>Nexon G-Star</h3>
+    </div>
+  </div>
+</section>
+
+<section id="esports" class="container content-section full-page">
+  <div class="vertical-center-content" >
+
+    <div class="container">
+      <div class="row text-center">
+        <h1>가능성과 잠재력을 가진 e스포츠 시장</h1>
+        <p>
+          e스포츠 생태계는 이제 시작일 뿐
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+          <h2 class="text-center">
+            <span class="glyphicon glyphicon-user"></span>
+            잠재유저 4억명
+          </h2>
+          <p>리그 오브 레전드 1억명, 크로스파이어 2억명, 도타2 2천만명 등 수많은 e스포츠 잠재유저가 있습니다.</p>
+        </div>
+        <div class="col-md-5">
           <div class="row">
-            <img src="images/phone_nexongstar.png" class="img-responsive media-object" alt=""/>
-
-            <p>2013 지스타 기간 동안 넥슨 코리아와 제휴하여 서비스</p>
-
+            <h2 class="text-center">
+              <span class="glyphicon glyphicon-signal"></span>
+              연 2배 성장
+            </h2>
           </div>
 
-
-        </div>
-        <div class="col-md-4 col-md-offset-1">
-          <h3>BET LOL</h3>
-          <img src="images/phone_betlol.png" class="img-responsive media-object" alt=""/>
-          <p>2013 롤드컵 시즌 3를 대상으로 유럽, 필리핀, 한국, 미국, 남미 등 전세계 유저를 유치했습니다.</p>
+          <p>북미, 유럽 e스포츠 중계 채널인 트위치 티비는 출시 2년 3개월 만에 4500만명이 머무르는 거대 미디어입니다.</p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-
-  <section id="recruit" class="container content-section">
-    <div class="page-header">
-      <h1>Recruit</h1>
-      <p>더웨일게임즈와 함께 e스포츠를 더욱 재밌게 만들 인재를 기다리고 있습니다.</p>
-    </div>
-    <div class="row container">
-      <div class="col-md-5">
-        <div class="row">
-          <h2>지원분야</h2>
-          <hr class="light">
-        </div>
-
-        <div class="row">
-          <h3>개발 (Software Engineer)</h3>
-          <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
-        </div>
-        <div class="row">
-          <h3>기획운영 (Product Manager)</h3>
-          <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
-        </div>
-        <div class="row">
-          <h3>디자인 (UX/UI Designer)</h3>
-          <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
-        </div>
+<section id="products" class="container content-section">
+  <div class="container">
+    <div class="row">
+      <div class="page-header">
+        <h1>Product</h1>
       </div>
-      <div class="col-md-5 col-md-offset-1">
-        <div class="row">
-          <h2>지원방법</h2>
-          <hr class="light">
+    </div>
+    <div class="row jumbotron">
+      <div class="row">
+        <h1>eSports Battle</h1>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-6">
+          <img src="images/phone_esportsbattle.png" class="center-block img-responsive" alt=""/>
+        </div>
+        <div class="col-md-6">
           <p>
-            <a href="mailto:contact@thewhalegames.com">contact@thewhalegames.com</a><br>
-            이력서, 자기소개서, 포트폴리오 등
+            e스포츠 배틀은 e스포츠 결과를 예측하고, 예측 경쟁을 통해 유저 간의 또다른 승부를 겨루는 시뮬레이션 서비스입니다.
           </p>
-        </div>
+          <p>
+            관심있는 e스포츠 경기에 매일 주어지는 무료 포인트를 걸고 결과를 예측해보세요. 결과를 적중시키고 포인트를 얻으면 일간/주간 포인트 랭킹에 올라 문화상품권의 주인공이 될 수 있습니다.
+          </p>
+          <a href="http://esportsbattle.com/download" class="btn btn-primary btn-lg" data-flare='{
+          "category": "esportsbattle",
+          "action": "click",
+          "label": "download"
+        }'>다운로드</a>
+        <a href="http://esportsbattle.com" class="btn btn-default btn-lg" data-flare='{
+        "category": "esportsbattle",
+        "action": "click",
+        "label": "more info"
+      }'>더 알아보기</a>
+    </div>
+
+  </div>
+</div>
+<div class="row center-block">
+  <div class="col-md-4 col-md-offset-2">
+    <h3>Nexon G-Star</h3>
+    <div class="row">
+      <img src="images/phone_nexongstar.png" class="img-responsive media-object" alt=""/>
+
+      <p>2013 지스타 기간 동안 넥슨 코리아와 제휴하여 서비스</p>
+
+    </div>
+
+
+  </div>
+  <div class="col-md-4 col-md-offset-1">
+    <h3>BET LOL</h3>
+    <img src="images/phone_betlol.png" class="img-responsive media-object" alt=""/>
+    <p>2013 롤드컵 시즌 3를 대상으로 유럽, 필리핀, 한국, 미국, 남미 등 전세계 유저를 유치했습니다.</p>
+  </div>
+</div>
+</div>
+</section>
+
+
+<section id="recruit" class="container content-section">
+  <div class="page-header">
+    <h1>Recruit</h1>
+    <p>더웨일게임즈와 함께 e스포츠를 더욱 재밌게 만들 인재를 기다리고 있습니다.</p>
+  </div>
+  <div class="row container">
+    <div class="col-md-5">
+      <div class="row">
+        <h2>지원분야</h2>
+        <hr class="light">
+      </div>
+
+      <div class="row">
+        <h3>개발 (Software Engineer)</h3>
+        <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
+      </div>
+      <div class="row">
+        <h3>기획운영 (Product Manager)</h3>
+        <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
+      </div>
+      <div class="row">
+        <h3>디자인 (UX/UI Designer)</h3>
+        <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
       </div>
     </div>
-    <hr class="bold">
-  </section>
-
-  <section id="contact" class="container container-section full-page">
-    <div class="vertical-center-content" data-scroll-reveal>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <h2>Contact The Whales</h2>
-            <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
-
-            <ul class="list-inline banner-social-buttons">
-              <li>
-                <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li>
-                <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
-                  <i class="fa fa-envelope"></i>
-                </a>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </div>
+    <div class="col-md-5 col-md-offset-1">
+      <div class="row">
+        <h2>지원방법</h2>
+        <hr class="light">
+        <p>
+          <a href="mailto:recruit@thewhalegames.com" data-flare='{
+          "category": "contact",
+          "action": "click",
+          "label": "send recruit mail"
+        }'>recruit@thewhalegames.com</a><br>
+        이력서, 자기소개서, 포트폴리오 등
+      </p>
     </div>
-  </section>
+  </div>
+</div>
+<hr class="bold">
+</section>
 
-  <footer class="container company">
-    <span><strong class="text-left brand">The Whale Games</strong></span>
-    <span><address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address></span>
-  </footer>
+<section id="contact" class="container container-section full-page">
+  <div class="vertical-center-content" data-scroll-reveal>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h2>Contact The Whales</h2>
+          <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
 
-  <!-- build:js scripts/vendor.js -->
-  <!-- bower:js -->
-  <script src="../bower_components/jquery/dist/jquery.js"></script>
-  <script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
-  <!-- endbower -->
-  <!-- endbuild -->
+          <ul class="list-inline banner-social-buttons">
+            <li>
+              <a href="http://facebook.com/esportsbattle" class="btn btn-circle" data-flare='{
+              "category": "contact",
+              "action": "click",
+              "label": "visit facebook page"
+            }'>
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:contact@thewhalegames.com" class="btn btn-circle" data-flare='{
+          "category": "contact",
+          "action": "click",
+          "label": "send contact mail"
+        }'>
+        <i class="fa fa-envelope"></i>
+      </a>
+    </li>
+  </ul>
 
-  <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');
-  </script>
+</div>
+</div>
+</div>
+</div>
+</section>
 
-  <!-- build:js scripts/plugins.js -->
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-  <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
-  <!-- endbuild -->
+<footer class="container company">
+  <span><strong class="text-left brand">The Whale Games</strong></span>
+  <span><address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address></span>
+</footer>
+
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-50017448-2', 'thewhalegames.com');
+ga('send', 'pageview');
+
+</script>
+
+<!-- build:js scripts/plugins.js -->
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+<script src="../bower_components/flare/dist/flare.js"></script>
+<!-- endbuild -->
 
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-  <!-- build:js({app,.tmp}) scripts/main.js -->
-  <script src="scripts/main.js"></script>
-  <!-- endbuild -->
+<!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
 
-  <script>
-  window.scrollReveal = new scrollReveal();
-  </script>
+<script>
+window.scrollReveal = new scrollReveal();
+flare.init();
+</script>
 </body>
 
 </html>
