트위터 카드 meta tag 수정

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="더웨일게임즈 The Whale Games">
   <meta name="twitter:description" content="We Make Games More Fun">
-  <meta name="twitter:creator" content="">
+  <meta name="twitter:site" content="@thewhalegames">
+  <meta name="twitter:creator" content="@thewhalegames">
   <meta name="twitter:image:src" content="http://thewhalegames.com/images/102ae3ef.phone_esportsbattle.png">
   <meta name="twitter:domain" content="http://thewhalegames.com">
   <meta name="twitter:app:name:googleplay" content="e스포츠배틀">
